trunk/test/fail/ac/pointcutunknown.app
//Error: pointcut somepointcut does not exist:

application test

access control rules

  rule pointcut somepointcut(a:Int)
  {
    true
  }
  